--- a/WebAirport/Views/TypeAirplane/Index.cshtml
+++ b/WebAirport/Views/TypeAirplane/Index.cshtml
@@ -3,6 +3,9 @@
 @{
     ViewBag.Title = "Типы самолетов";
 }
+<div>
+    @Html.ActionLink("Добавить тип самолета", "Create")
+</div>
 
 <h2>Список типов самолетов</h2>
 
