--- a/WebAirport/Views/Position/Delete.cshtml
+++ b/WebAirport/Views/Position/Delete.cshtml
@@ -5,68 +5,31 @@
 }
 
 <h2>Список связанных сотрудников с выбранной должностью</h2>
+
 <div>
-    @*<form>*@
-        <p>Текущая выбранная должность: </p>
-        <p>@ViewBag.CurrentPosition.JobTitle</p>
-        <p>Заменить на должность: </p>
-        <select id="NewPosId">
-            @foreach (var pos in ViewBag.ListPosition)
+    @Html.ValidationSummary(true)
+    <form method="post">
+        <p>Выбранная должность для удаления: @ViewBag.currentPosition.JobTitle <input type="text" hidden value="@ViewBag.currentPosition.Id" name="currentId" /></p>
+        <table>
+            <tr>
+                <td>Фамилия Имя</td>
+                <td>Отчество</td>
+                <td>Текущая должность</td>
+                <td>замена должности</td>
+            </tr>
+            @foreach (var staff in Model)
             {
-                if (pos.Id != ViewBag.CurrentPosition.Id)
-                {
-                    <option value="@pos.Id">@pos.JobTitle</option>
-                }
-                else
-                {
-                    <option value="@pos.Id" selected="selected">@pos.JobTitle</option>
-                }
-            }
-        </select>
-
-        <input type="submit" onclick="modifyStaff()" />
-
-        <div>
-            <table>
                 <tr>
-                    <td>Перенос</td>
-                    <td>Фамилия Имя</td>
-                    <td>Отчество</td>
-                    <td>Пол</td>
+                    @Html.HiddenFor(model => staff.Id, new { Name = "Id" })
+                    <td>@staff.FirstNameStaff</td>
+                    <td>@staff.LastNameStaff</td>
+                    <td>@staff.Position.JobTitle</td>
+                    <td>
+                        @Html.DropDownListFor(model => staff.PositionId, ViewBag.positionsList as SelectList, new { Name = "PositionId" })
+                    </td>
                 </tr>
-                @foreach (var pos in Model)
-                {
-                    <tr>
-                        <td><input type="checkbox" name="Check" value="@pos.Id" /></td>
-                        <td>@pos.FirstNameStaff</td>
-                        <td>@pos.LastNameStaff</td>
-                        <td>@pos.Gender</td>
-                    </tr>
-                }
-            </table>
-        </div>
-    @*</form>*@
-</div>
-
-<script type="text/javascript">
-    function modifyStaff() {
-        var newPosId = document.getElementById("NewPosId").value;
-        var Check = document.getElementsByName('Check');
-        var arrCheck = new Array();
-
-        Check.forEach((check) => {
-            if (check.checked) {
-                arrCheck.push(check.value);
             }
-        });
-
-        $.post("/Position/Delete", {
-            arrStaff: arrCheck,
-            newIdPos: newPosId
-        })
-            .done(function () {
-                $.get("/Position/Delete", { id: @ViewBag.CurrentPosition.Id})
-                    .done(function () { location.reload() });
-            });
-    }
-</script>
+        </table>
+        <input type="submit" value="Сохранить изменения" />
+    </form>
+</div>
